Fix text wrapping on non chrome browsers

--- a/apps/timsexperiments/src/styles/global.css
+++ b/apps/timsexperiments/src/styles/global.css
@@ -9,4 +9,14 @@
     --animate-slide-start: var(--animate-slide-percent);
     --animate-slide-end: var(--animate-slide-percent);
   }
+
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply whitespace-normal;
+  }
 }
